# lucent

./: .gitignore  README.md  pyproject.toml  ruff.toml  zensical.toml
.github/workflows/: docs.yml
docs/: acknowledgments.md  configuration.md  glossary.md  index.md  installation.md  reference_codex.md  reference_convention.md  reference_conventions.md  reference_rule.md  reference_rules.md  usage.md  watcher.md
docs/stylesheets/: extra.css
src/lucent/: __init__.py  errors.py  lucent.py  lucent_example_config.py
