[project]
name = "lucent-codex"
version = "0.0.1"
description = "System for defining, validating, and resolving naming conventions."
readme = "README.md"
authors = [
    { name = "Tristan Languebien", email = "tlanguebien@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
lucent = "lucent.lucent_example_config:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["lucent*"]