[project]
name = "lucent-codex"
version = "0.0.2"
description = "System for defining, validating, and resolving naming conventions."
readme = "README.md"
authors = [
    { name = "Tristan Languebien", email = "tlanguebien@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = ["filesystem", "templating", "regex", "file discovery", "naming conventions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[project.urls]
Homepage = "https://github.com/tristanlanguebien/lucent"

[project.scripts]
lucent = "lucent.lucent_example_config:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["lucent*"]